--- a/main.css
+++ b/main.css
@@ -7,7 +7,6 @@
 body{
     margin: 0px;
     padding: 0px;
-    background-image: url('background.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -16,8 +15,8 @@ body{
 }
 
 .main{
-    background: rgba(78, 78, 78, 0.75);
-    max-width: 800px;
+    background: rgba(78, 78, 78, 0.60);
+    width: 800px;
     margin: 0 auto;
 }
 
