--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body{
     background: rgba(78, 78, 78, 0.60);
     width: 800px;
     margin: 0 auto;
+    min-height: 100vh;
 }
 
 .heading{
@@ -31,14 +32,14 @@ body{
 }
 
 .heading a{
-    font-size: 10px;
-    color: rgb(223, 223, 223);
+    font-size: 13px;
+    color: rgb(236, 236, 236);
     text-shadow: none;
     text-decoration: none;
 }
 
 .heading a:hover{
-    color: rgb(165, 165, 165);
+    color: rgb(201, 201, 201);
 }
 
 .achievement{
@@ -89,4 +90,33 @@ hr{
 .secret span{
     color: #AA00AA;
     text-shadow: 2px 2px #2A002A;
+}
+
+.download{
+    position: relative;
+    bottom: 10px;
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    text-shadow: none;
+    text-decoration: none;
+    font-family: Minecraftia;
+    text-align: center;
+}
+
+.download p{
+    text-shadow: 2px 2px #3F3F3F;
+}
+
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+    text-decoration: none;
+}
+  
+.btn:hover {
+    background-color: RoyalBlue;
 }
