--- a/main.css
+++ b/main.css
@@ -93,6 +93,8 @@ hr{
 }
 
 .download{
+    padding-left: 50px;
+    padding-right: 50px;
     position: relative;
     bottom: 10px;
     font-size: 20px;
